# carlos-eduardo-sanchez-torres-gear-academy

./: .gitignore  README.md
.devcontainer/: devcontainer.json
1-hello-world/: Cargo.toml  build.rs
1-hello-world/io/: Cargo.toml
1-hello-world/io/src/: lib.rs
1-hello-world/src/: lib.rs
1-hello-world/tests/: hello_world_test.rs
escrow/: .binpath  Cargo.toml  build.rs  escrow.meta.txt
escrow/io/: Cargo.toml
escrow/io/src/: lib.rs
escrow/src/: lib.rs
escrow/state/: Cargo.toml
escrow/state/src/: lib.rs
escrow/tests/: escrow_test.rs
hello-world/: Cargo.toml  hello_world.meta.txt
hello-world/io/src/: lib.rs
hello-world/src/: lib.rs
hello-world/tests/: hello_world_test.rs
tamagotchi-01/: .binpath  Cargo.toml  build.rs  tamagotchi.meta.txt
tamagotchi-01/interface/: Cargo.toml
tamagotchi-01/interface/src/: lib.rs
tamagotchi-01/src/: lib.rs
tamagotchi-01/tests/: tamagotchi_test.rs
